<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="pl.legalnyplener.planktrzon.LoginActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/BackgroundRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/LoginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/GoInButton"
        android:layout_alignEnd="@id/GoInButton"
        android:layout_alignStart="@id/GoInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="LogInButtonClick"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/LogIn"
        android:visibility="visible" />

    <Button
        android:id="@+id/GoInButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:onClick="GoInButtonClick"
        android:paddingBottom="20dp"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:text="@string/Goin"
        android:visibility="visible" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/LoginUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="40dp"
        android:minWidth="250dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:visibility="gone" />

    <EditText
        android:id="@+id/LoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/PasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:hint="@string/Login"
        android:minHeight="40dp"
        android:minWidth="250dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:visibility="gone" />

    <Button
        android:id="@+id/LoginUser"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/PasswordEditText"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/GoInButton"
        android:layout_marginBottom="30dp"
        android:minHeight="50dp"
        android:minWidth="150dp"
        android:onClick="logInUser"
        android:text="@string/LoginUser"
        android:visibility="gone" />


</RelativeLayout>
